# MEMORY_ARENA

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile.render  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_memory_priority.py  0003_add_embedding_dimensions.py  0004_add_memory_summaries.py  0005_add_user_auth_columns.py  0006_add_user_tenant_id.py  0007_add_memory_lifecycle_fields.py  0008_add_user_role.py  0009_add_audit_log.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/application/: __init__.py  exceptions.py  presenters.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  startup.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/repositories/: __init__.py  memory_embedding_repository.py  memory_relation_repository.py  memory_repository.py  memory_summary_repository.py  memory_version_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  context.py  graph.py  health.py  ingest.py  intelligence.py  memory.py  observability.py  query.py  responses.py  retrieval.py  summary.py
backend/app/services/: __init__.py
backend/scripts/: benchmark_stage18.py  seed_demo.py  validate_full_stack.py
backend/scripts/dr/: backup_neo4j.sh  backup_postgres.sh  logical_snapshot.py  restore_neo4j.sh  restore_postgres.sh
backend/tests/integration/: _db.py  _retrieval.py  test_analytics.py  test_analytics_cache.py  test_api.py  test_app_boot.py  test_auth_api.py  test_auth_service.py  test_authorization_api.py  test_authorization_service_level.py  test_consolidation_events.py  test_context_api.py  test_context_builder.py  test_contradicts_edge_durability.py  test_conversation_capture.py  test_demo_seed.py  test_embedding_events.py  test_embedding_repository.py  test_embedding_service.py  test_extraction_decoupled.py  test_graph_api.py  test_graph_aware_retrieval.py  test_graph_events.py  test_graph_sync.py  test_hardening_engines.py  test_hardening_safety_metrics.py  test_health_api.py  test_health_cache.py  test_health_metrics_extended.py  test_hybrid_retriever.py  test_inference_prepend.py  test_ingest_api.py  test_ingest_use_case.py  test_intelligence_api.py  test_keyword_retriever.py  test_langgraph_consolidation.py  test_langgraph_extraction.py  test_llm_context_builder.py  test_maintenance_workflows.py  test_memory_autoprovisions_user.py  (+42 more)
backend/tests/unit/: _agent_fakes.py  test_agent_dtos.py  test_agent_observability.py  test_agent_reliability.py  test_agent_streaming.py  test_agent_tools.py  test_authorization.py  test_bm25.py  test_cache_provider.py  test_cache_serialization.py  test_citation_validation.py  test_clock.py  test_compression.py  test_compression_prompts.py  test_compression_validation.py  test_compressor_factory.py  test_config.py  test_conflict_detection.py  test_consolidation.py  test_consolidation_job_processor.py  test_consolidation_steps.py  test_consolidation_value_replacement.py  test_conversation_capture_policy.py  test_conversation_capture_service.py  (+62 more)
(+374 files in other folders)
