# =============================================================================
# MemoryArena Backend — project & tooling configuration
# Stage 0: dependency contract declared; no application code yet.
# =============================================================================
[project]
name = "memoryarena-backend"
version = "0.0.0"
description = "MemoryArena — production-grade AI memory system (backend)"
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # Web framework / ASGI
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  # Persistence — PostgreSQL + pgvector
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pgvector>=0.3",
  "alembic>=1.13",
  # Graph & cache
  "neo4j>=5.25",
  "redis>=5.1",
  # LLM orchestration
  "langgraph>=0.2",
  "langchain>=0.3",
  "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
